[package]
name = "dss_main"
version = "0.1.0"
authors = ["John Nystrom <eta077@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dss_mlb = { path = "../dss_mlb" }
glium = "*"
glium-glyph = "*"
image = "*"
log = "*"
log4rs = "*"
tokio = { version = "*", features = ["macros"] }
