[package]
name = "dss_main"
version = "0.1.0"
authors = ["John Nystrom <eta077@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dss_mlb = { path = "../dss_mlb" }
glium = "0.27.0"
glyph_brush = "0.7.0"
image = "0.23.8"
log = "0.4.11"
log4rs = "0.13.0"
rusttype = "0.9.2"
tokio = { version = "0.2.22", features = ["macros"] }
twox-hash = "1.5.0"
