[package]
name = "dss_mlb"
version = "0.1.0"
authors = ["John Nystrom <eta077@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
futures = "*"
hyper = "*"
hyper-tls = "*"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = { version = "*", features = ["macros"] }
