[package]
name = "dss_mlb"
version = "0.1.0"
authors = ["John Nystrom <eta077@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
futures = "0.3.5"
hyper = "0.13.7"
hyper-tls = "0.4.3"
log = "0.4.11"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }
